syntax = "proto3";

option csharp_namespace = "GrpcServer";

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

service Calculator {
  rpc Add (ArithmeticRequest) returns (ArithmeticResponse);
  rpc Substract(ArithmeticRequest) returns (ArithmeticResponse);
  rpc Multiply(ArithmeticRequest) returns (ArithmeticResponse);
  rpc Devided(ArithmeticRequest) returns (ArithmeticResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message ArithmeticRequest{
	double f_oper = 1;
	double s_oper = 2;
}

message ArithmeticResponse{
	double result = 1;
}
